Included Command Pattern as example
